@@ -13,7 +13,7 @@ module API
 
     class Build < Grape::Entity
       expose :id, :commands, :path, :ref, :sha, :project_id, :repo_url,
-        :before_sha, :timeout, :allow_git_fetch, :project_name
+        :before_sha, :timeout, :allow_git_fetch, :project_name, :options
 
       expose :variables, using: Variable
     end
